--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,17 @@
     
   <build>
     <finalName>HospitalManagement</finalName>
+	  <plugins>
+	  <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-war-plugin</artifactId>
+		  <version>3.3.1</version>
+	  </plugin>
+	  <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-compiler-plugin</artifactId>
+		  <version>3.8.1</version>
+	  </plugin>
+	  </plugins>
   </build>
 </project>
